--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'entryphone.co.uk.mvvm'
+    namespace 'mmehdi.com.mvvm'
     compileSdk 32
 
     defaultConfig {
-        applicationId "entryphone.co.uk.mvvm"
+        applicationId "mmehdi.com.mvvm"
         minSdk 28
         targetSdk 32
         versionCode 1
